[package]
name = "porcupine-sys"
version = "0.1.0"
description = "Rust bindings to Porcupine"
authors = ["Lilis Iskandar <lilis@veand.co>", "Alex Moon <alex.r.moon@gmail.com>"]
license = "MIT"
repository = "https://github.com/veandco/porcupine-sys.git"
homepage = "https://github.com/veandco/porcupine-sys"
documentation = "https://docs.rs/porcupine-sys/"
build = "build.rs"
exclude = ["assets/*.ppn", "assets/*.pv", "assets/*.raw"]
